--- a/tmux.conf
+++ b/tmux.conf
@@ -4,11 +4,17 @@ bind C-s send-prefix
 
 
 unbind %
-bind \ split-window -h
-bind-key \ split-window -h
-bind - split-window -v
+bind \ split-window -h -c '#{pane_current_path}'
+bind-key \ split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
+
+
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+
+
 set-option -g default-terminal "screen-256color"
+
+
 set -g status-bg "#666666"
 set -g status-fg "#aaaaaa"
 
