--- a/tmux.conf
+++ b/tmux.conf
@@ -41,3 +41,4 @@ bind -n C-Down resize-pane -D 5
 bind -n C-Up resize-pane -U 5
 
 bind-key h split-window -h "htop"
+bind-key i split-window -h "ipython"
