--- a/tmux.conf
+++ b/tmux.conf
@@ -21,6 +21,16 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 
 set-option -g default-terminal "screen-256color"
+set-option -g default-shell /bin/zsh
+set -g utf8
+set-window-option -g utf8 on
+set -g default-terminal "screen-256color"
+
+
+#Settinget the numbering of windows to go from 1 instead
+# of 0 - silly programmers :|
+set-option -g base-index 1
+setw -g pane-base-index 1
 
 
 set -g status-bg "#666666"
@@ -42,3 +52,4 @@ bind -n C-Up resize-pane -U 5
 
 bind-key h split-window -h "htop"
 bind-key i split-window -h "ipython"
+
