--- a/tmux.conf
+++ b/tmux.conf
@@ -22,8 +22,8 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 set-option -g default-terminal "screen-256color"
 set-option -g default-shell /bin/zsh
-set -g utf8
-set-window-option -g utf8 on
+#set -g utf8
+#set-window-option -g utf8 on
 set -g default-terminal "screen-256color"
 
 
