--- a/tmux.conf
+++ b/tmux.conf
@@ -52,17 +52,5 @@ bind -n C-Up resize-pane -U 5
 
 bind-key i split-window -h "ipython"
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-setw -g mode-keys vi
-
-# Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Bind ']' to use pbpaste
-bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
-
+# fix the escape delay problem when using vim
+set -sg escape-time 0
